# datadog-tracing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  test.yml
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
src/: axum.rs  formatter.rs  init.rs  lib.rs  propagator.rs  shutdown.rs  tracer.rs
src/axum/: http_server.rs  middleware.rs  mod.rs  shutdown.rs
