[package]
name = "datadog-tracing"
version = "0.2.3"
authors = [
    "Fernando Goncalves <fernando.hsgoncalves@gmail.com>",
    "Alefh Sousa <alefh.sousa@gmail.com>",
]
edition = "2021"
license = "MIT"
description = "utilities for integrating Datadog with tracing"
readme = "README.md"
homepage = "https://github.com/will-bank/datadog-tracing"
repository = "https://github.com/will-bank/datadog-tracing"
keywords = ["datadog", "tracing", "opentelemetry", "axum"]
categories = ["web-programming"]
exclude = [".pre-commit-config.yaml"]

[features]
axum = [
    "dep:axum",
    "dep:tokio",
    "dep:axum-tracing-opentelemetry",
    "dep:tracing-opentelemetry-instrumentation-sdk",
    "dep:http",
    "dep:pin-project-lite",
    "dep:futures-util",
    "dep:tower",
]

[dependencies]
axum = { version = "^0.7.4", optional = true }
http = { version = "1.0", optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures-util = { version = "0.3", default-features = false, features = [
], optional = true }
axum-tracing-opentelemetry = { version = "0.16.0", optional = true }
tracing-opentelemetry-instrumentation-sdk = { version = "0.16.0", optional = true }
tower = { version = "0.4", optional = true }
chrono = "^0.4.33"
opentelemetry = { version = "^0.21.0" }
opentelemetry_sdk = { version = "^0.21.2", features = ["rt-tokio"] }
opentelemetry-http = { version = "^0.10.0" }
opentelemetry-datadog = { version = "0.9.0", features = ["reqwest-client"] }
reqwest = { version = "0.11", default-features = false }
serde = { version = "^1.0.196", features = ["derive"] }
serde_json = "^1.0.113"
tokio = { version = "^1.36.0", features = [
    "signal",
    "macros",
], optional = true }
tracing = "^0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "^0.22.0"
tracing-serde = "^0.1.3"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json"] }
