[package]
name = "axum-full-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7.5"
datadog-tracing = { path = "../..", features = ["axum"] }
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["timeout"] }
tracing = "^0.1.40"
