[package]
name = "axum-full-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.8"
datadog-tracing = { path = "../..", features = ["axum"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["timeout"] }
tracing = "^0.1.40"
